# datalog-translator

./: README.md  cabal.project
.github/workflows/: haskell.yml
docs/: coursework.tex
interpreter/: interpreter.cabal
interpreter/src/: Interpreter.hs
interpreter/test/: GenASTTest.hs  InterpreterTest.hs
matrix-interpreter/: matrix-interpreter.cabal
matrix-interpreter/src/: MatrixInterpreter.hs
matrix-lib/: CHANGELOG.md  matrix-lib.cabal
matrix-lib/.github/workflows/: haskell-ci.yml
matrix-lib/app/: Main.hs
matrix-lib/src/: Matrix.hs
matrix-lib/test/: MatrixTest.hs
src-coq/: DatalogAST.v  Evidence.v  Interpreter.v  MatrixAST.v  MatrixInterpreter.v  MatrixLib.v  Translator.v
translator/: translator.cabal
translator/src/: DatalogAST.hs  MatrixAST.hs  Translator.hs
