cabal-version:      2.4
name:               matrix-lib
version:            0.1.0.0
description:        Please see the README on GitHub at <https://github.com/ALanovaya/datalog-translator#readme>
homepage:           https://github.com/ALanovaya/datalog-translator#readme
bug-reports:        https://github.com/ALanovaya/datalog-translator/issues
author:             ALanovaya
maintainer:         lanovaya.al6@gmail.com
license:            MIT
license-file:       ../LICENSE
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ALanovaya/datalog-translator/matrix-lib

library
  exposed-modules:
      Matrix
  other-modules:
      Paths_matrix_lib
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
    , deepseq
    , template-haskell
    , split
  default-language: Haskell2010

executable matrix-lib-exe
  main-is: Main.hs
  other-modules:
      Paths_matrix_lib
  hs-source-dirs:
      app
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , deepseq
    , matrix-lib
    , template-haskell
    , split
  default-language: Haskell2010
