cabal-version:      2.4
name:               translator
version:            0.1.0.0
description:        Please see the README on GitHub at <https://github.com/ALanovaya/datalog-translator#readme>
homepage:           https://github.com/ALanovaya/datalog-translator#readme
bug-reports:        https://github.com/ALanovaya/datalog-translator/issues
author:             ALanovaya
maintainer:         lanovaya.al6@gmail.com
license:            MIT
license-file:       ../LICENSE
build-type:         Simple
extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ALanovaya/datalog-translator/translator

executable translator
    main-is:          
        Main.hs
    build-depends:    
        base >=4.14 && <5, matrix-lib
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:   
        app
    default-language: Haskell2010

library
  exposed-modules:
      DatalogAST, Translator, MatrixAST
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.14 && <5, matrix-lib, containers >=0.5 && <0.7
  default-language: Haskell2010